syntax = "proto3";

package datacloud.clickhouse.v1;

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/clickhouse/v1;clickhouse";
option java_package = "doublecloud.priv.clickhouse.v1";
option java_outer_classname = "DCV";

message Version {
  // ID of the version.
  string id = 1;

  // Name of the version.
  string name = 2;

  // Whether version is deprecated.
  bool deprecated = 3;

  // List of versions that can be updated from current.
  repeated string updatable_to = 4;
}
