syntax = "proto3";

package datacloud.network.console.v1;

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/network/console/v1;console";

message Cloud {
    // Cloud type.
    string cloud_type = 1;

    // List of available regions in the cloud.
    repeated string region_ids = 2;
}
